# mimir

./: .coveragerc  .dockerignore  .gitignore  Caddyfile  Dockerfile  MANIFEST.in  README.txt  alembic.ini  bootstrap.py  config.toml.mako  development.ini  docker-compose-common.yml  docker-compose-dev.yml  docker-compose-prod.yml  mcron.guile  package.json  production.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  webpack.config.js
etc/cont-init.d/: 00-whitelist
etc/services.d/cron/: run
etc/services.d/mimir-dev-server/: run
etc/services.d/mimir-prod-server/: run
etc/services.d/webpack-dev-server/: run
mimir/: __init__.py  tests.py  views.py
mimir/alembic/: env.py
mimir/alembic/versions/: 218f7e1ece6_postversion_edit_summary.py  2675bc6512c_fix_wpv_check_constraint.py  2b489140be5_wpv_nulls.py  2bbb7832872_authorized_users.py  35b41a74130_authorized_users_2_electric_boogaloo.py  3ffa3fb372a_fetchedimage_model.py  41d36feab50_add_author_to_writeup.py  (+4 more)
mimir/api/: __init__.py
mimir/frontend/: App.jsx  altInstance.js  app-history.js  appdata.js  routes.jsx
mimir/lib/: extract.py  fetch.py  images.py  split.py  util.py
mimir/models/: __init__.py  mallows.py
mimir/scripts/: initializedb.py  mserve.py  mshell.py  worker.py
mimir/static/: index.html  site.css
mimir/templates/: admin.mako  base.mako  layout.mako  list.mako  mytemplate.pt  writeup.mako
mimir/views/: __init__.py  default.py
requirements/: dev.in  dev.txt  main.in  main.txt
src/mimir/: __init__.py  pshell.py  security.py  tests.py  toolbar.py  util.py
(+90 files in other folders)
