[metadata]
name = mimir
version = 0.0
author = Rose Davidson
author_email = rose@metaclassical.com
description = Mimir
keywords = web, pyramid, pylons
url =
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[options.entry_points]
paste.app_factory = main = mimir:main
console_scripts =
    initialize_mimir_db=mimir.scripts.initialize_db:main
    mimir_hashpw=mimir.scripts.hashpw:main

[flake8]
select = B,B9,BLK,C,E,F,I,W
ignore = E203,E501,W503
max-line-length = 80
application-import-names = mimir
import-order-style = google

